samples/_failures_safe/1761313922_462732_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecc3803b.c: In function ‘main’:
./samples/SAFE/__tmp_ecc3803b.c:150:5: error: expected expression at end of input
  150 |     for (size_t i = 0; i < decompressed_size;
      |     ^~~
./samples/SAFE/__tmp_ecc3803b.c:150:5: error: expected declaration or statement at end of input
